package com.lthaoshao.pattern.factory.abstractfactory;
/**
 * <p>  </p>
 *
 * @author lthaoshao
 * @version V1.0
 * @date 2019/7/14 22:48
 */
public class HuaWeiWatch implements Watch {

    public void count() {
        System.out.println("正在使用华为Watch计步...");
    }
}
