package com.lthaoshao.pattern.factory.abstractfactory;
/**
 * <p>  </p>
 *
 * @author lthaoshao
 * @version V1.0
 * @date 2019/7/14 22:44
 */
public class XiaoMiPad implements Pad {

    public void vedio() {
        System.out.println("正在使用小米Pad看电影...");
    }
}
